mobile и desktop версии перфект пиксель

--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -183,8 +183,9 @@ margin-top: 21px;
             opacity:0.3;
         }
         &__social{
-             margin-left: 90px;
-             margin-top: 16px;
+            margin: 0 0 0 95px;
+            //  margin-left: 90px;
+            //  margin-top: 16px;
 
         }
        
