--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -1,12 +1,16 @@
 .contacts {
-padding: 32px 0;
+// padding: 32px 0;
+min-height: 850px;
     
 
     &__title{
         @include titleContactMobile;
         padding: 0 32px;
-        line-height: calc(38/18);
-        margin: 27px 0 0 0;
+        // line-height: calc(38/18);
+        // margin: 27px 0 0 0;
+        line-height: calc(30/18);
+        margin: 24px 0 0 0;
+
     }
 
     &__wrap {
@@ -120,7 +124,7 @@ padding: 0;
 
     .contacts{
         min-width: 1050px;
-        max-height: 524px;
+        min-height: 524px;
         margin: 0 auto;
 
         &__inner{
