мобильная, планшетная версии в пиксель перфект

--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -56,10 +56,9 @@
 
     &__copyright{
       border: none;
-     // margin: 0;
-      //flex-basis: 25%;
-        margin-right: 15px;
-        margin-top: 10px;
+      // margin-right: 12px;
+      // margin-top: 5px;
+      margin: 5px 12px 0 0;
 
     }
   }
