--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -117,7 +117,7 @@
             //display: inline-block;
             flex-basis: 31%;
             text-align: center;
-margin-left: 25px;
+            margin: 0 0 4px 25px;
         }
         &__logo-link{
             display: inline-block;
@@ -140,20 +140,7 @@ margin-left: 25px;
 	        height: 34px;
         }
         &__social{
-          //flex-basis: 32%;
-            //flex-basis: 43%;
-            //flex-basis: 46%;
-           // margin: 0;
-            //height: 55px;
-           // text-align: center;
-//margin-right: 32px;
-//margin-top: 23px;
-//margin-top: 25px;
-//display: flex;
-margin-left: 20px;
-margin-top: 21px;
-
-
+            margin-left: 23px;
         }
 
 
