--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -190,20 +190,44 @@
     &__title {
       align-self: flex-start;
       @include titleXlTab;
+      margin-bottom: 15px;
     }
 
     &__list {
     flex-direction: row;
+    min-height: 443px;
    }
-
+   &__feature{
+    font-size: 19px;
+    line-height: calc(22/19);
+  }
+  &__feature{
+    &--fabric::before{
+      margin: 26px 0 17px 8px;
+    }
+    &--style::before{
+      margin: 51px 0px 26px 1px;
+    }
+    &--likes::before{
+      margin: 56px 0 21px 8px;
+    }
+    &--love::before{
+      margin: 30px 0 16px 8px;
+    }
+    &--native::before{
+      margin: 55px 0 26px 6px;
+    }
+    &--box::before{
+      margin: 53px 0 19px 8px;
+    }
+  }
 }
 
 .slider {
-
-  margin: 0 auto;
   padding: 0;
   width: 768px;
-  height: 455px;
+  min-height: 475px;
+  margin: 50px 0;
 
   &__bg {
     background-image: url(/src/img/review-1x.jpg);
@@ -217,7 +241,7 @@
     width: 225px;
     @include titleXlTab;
     margin: 0;
-    padding-top: 80px;
+    padding-top: 77px;
   }
 
   &__slides{
@@ -253,21 +277,29 @@
 
   &__comment {
     @include descrTablet;
-    width: 606px;
+    width: 650px;
     height: 170px;
-    margin: 20px 0 0 0;
+    margin: 0;
+    padding: 0;
     
   }
 
   &__user {
-    width: 245px;
+    width: 260px;
+  }
+  &__auth{
+    font-size: 18px;
+    font-weight: 700;
+    line-height: calc(38/18);
   }
 
   &__controls {
     align-self: flex-end;
     order: 4;
     position: relative;
-    top: -25px;
+    top: -67px;
+    left: -17px;
+    width: 140px;
   }
 
   &__btn-left {
@@ -276,7 +308,7 @@
     height: 26px;
     border: none;
     outline: none;
-    margin-right: 20px;
+    margin-right: 35px;
   }
 
   &__btn-right {
@@ -308,8 +340,7 @@
     }
     &__feature{
       font-size: 19px;
-      // flex-basis: 390px;
-      padding: 24px 0 11px 4px;
+      padding: 4px 0 31px 4px;
 
       &--fabric::before{
         margin: 19px 0 18px 7px;
@@ -337,7 +368,7 @@
 
     min-width: 1055px;
     min-height: 453px;
-    margin-top: 54px;
+    margin: 50px auto;
 
     &__caption {
       @include titleDesk;
@@ -350,8 +381,8 @@
     }
 
     &__slides{
-      min-width: 881px;
-      margin-left: 175px;
+      min-width: 880px;
+      margin-left: 177px;
     }
 
     &__comment {
