доработка планшетной и десктопной версии формы

--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -112,6 +112,7 @@
           align-items: center;
           //margin-top:30px;//////izmen
           justify-content: space-between;
+          margin-top: 32px;
         }
         &__logo{
           display: flex;
@@ -185,7 +186,7 @@ margin-top: 21px;
              margin-top: 16px;
 
         }
-       
+
 
     }
 
