--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -154,7 +154,7 @@
         width: 100%;
         min-width: 1200px;
         &__inner{
-            margin-top: 53px;
+            margin-top: 30px;
         }
         &__logo{
           margin-left: 38px;
@@ -171,8 +171,8 @@
             opacity:0.3;
         }
         &__social{
-            margin: 0 0 0 95px;
-            //  margin-left: 90px;
+           // margin: 0 0 0 95px;
+              margin-left: 92px;
             //  margin-top: 16px;
 
         }
