версии для планшета и десктопа в пиксельперфект почти готовы

--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -66,8 +66,7 @@
 @media (min-width: 1024px){
   .footer{
     &__copyright{
-      margin-top: 7px;
-      margin-right: 38px;
+      margin: 3px 35px 0 0
     }
   }
 }
