--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -153,10 +153,10 @@
         width: 100%;
         min-width: 1200px;
         &__inner{
-            margin-top: 53px;
+            margin-top: 47px;
         }
         &__logo{
-          margin-left: 38px;
+          margin-left: 39px;
         }
         &__logo-link:hover {
             display: inline-block;
@@ -170,7 +170,7 @@
             opacity:0.3;
         }
         &__social{
-            margin: 0 0 0 95px;
+            margin: 0 110px 0 0;
             //  margin-left: 90px;
             //  margin-top: 16px;
 
