--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -182,11 +182,6 @@
             background-size: 40px 35px;
             background-image: radial-gradient(circle at 10px 15px, $white 14px, transparent 15px);
         }
-
-        // &__item:hover {
-        //     height: 124px;
-        // }
-
         &__icon1{
             z-index: 10;
         }
@@ -224,13 +219,15 @@
             font-size: 52px;
             width: 605px;
             padding: 152px 0 0 0;
-            // top: 145px;
         }
 
         &__item {
             width: 550px;
             height: 121px;
             border: transparent;
+        }
+        &__item:last-child:hover{
+            border: none;
         }
 
         &__link{
@@ -280,13 +277,6 @@
             background-size: 40px 35px;
             background-image: radial-gradient(circle at 10px 15px, $white 14px, transparent 15px);
         }
-
-        // &__item:hover {
-            
-        //     background-color: $greenLeftHover;
-        // }
-
-
         &__item:last-child {
             background-color: $greenRight;
             border: transparent;
