--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -152,6 +152,7 @@ min-height: 850px;
           flex-direction: column;
           align-content: flex-end;
           height: 524px;
+          margin: 0 auto;
         }
         &__box{
             flex-wrap: wrap;
@@ -165,6 +166,9 @@ min-height: 850px;
             width: 310px;
             padding: 30px 0 0 4px;
         }
+        &__wrap:last-child{
+            margin: 0;
+        }
         &__link{
             width: 230px;
         }
@@ -176,7 +180,7 @@ min-height: 850px;
             order: 3;
             align-self: flex-end;
             // margin-top: 72px;
-            margin-top: 15px;
+            margin-top: 11px;
         }
         &__btn{
             order: 2;
@@ -186,7 +190,7 @@ min-height: 850px;
         &__title{
             @include titleDesk;
             order: 1;
-            margin: 85px 48px 20px 0;
+            margin: 79px 48px 20px 0;
             padding: 0 32px;
         }
         &__icon{
