--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -294,6 +294,10 @@
     font-weight: 700;
     margin: 0 0 6px 0;
   }
+  &__detail{
+    display: flex;
+    flex-direction: column;
+  }
   &__hot-sale {
     @include titleSm;
     color: $greenLeft;
@@ -307,6 +311,9 @@
     // padding: 34px 0 34px 0;
     padding: 22px 0 16px 0;
   }
+  &__picture{
+    order: 2;
+  }
   &__price {
     @include titleSm;
     line-height: calc(24/17);
@@ -317,6 +324,7 @@
   }
   &__to-buy {
     height: 130px;
+    order: 3;
   }
   &__img {
     width: 100%;
@@ -485,7 +493,8 @@
     // height: 560px;
     margin: 0 auto;
     &__item {
-      height: 520px;
+      height: 421px;
+      // height: 520px;
       width: 668px;
       @include flexbox;
       flex-wrap: wrap;
@@ -495,7 +504,7 @@
     &__title {
       @include titleXlTab;
       align-self: flex-start;
-      margin: 0 0 49px 0;
+      margin: 10px 0 39px 0;
     }
     &__hot-sale {
       @include titleSm;
@@ -505,7 +514,7 @@
       margin-top: 15px;
       width: 72px;
       text-align: center;
-      margin: 10px 27px 0px 0px;
+      margin: 21px 27px 0px 0px;
     }
     &__table {
       width: 289px;
@@ -513,10 +522,13 @@
     }
     &__price {
       align-self: flex-start;
+      font-size: 21px;
+    padding-bottom: 32px;
     }
     &__detail {
-      height: 255px;
-      align-self: flex-start;
+      width: 668px;
+      height: 520px;
+      flex-wrap: wrap;
     }
     &__descr {
       @include descrTablet;
@@ -527,9 +539,19 @@
     &__to-buy {
       height: 130px;
       width: 292px;
+      order: 0;
     }
     &__picture {
-      display: inline-block;
+      // display: inline-block;
+      align-self: flex-end;
+    }
+    &__caption{
+      display: flex;
+      // flex-direction: row-reverse;
+      justify-content: space-between;
+      width: 668px;
+      margin: 0 auto;
+      // flex-direction: row;
     }
   }
   .decoration {
@@ -627,51 +649,70 @@
   }
   .catalog-card {
     width: 1050px;
-    height: 637px;
     margin: 0 auto;
-    padding: 70px 0 0 0;
+    padding: 0;
+    // padding: 25px 0 0 0;
+    // height: 682px;
+    height: 707px;
+    // width: 1050px;
+    // height: 637px;
+    // margin: 0 auto;
+    // padding: 70px 0 0 0;
     // padding: 0;
     &__item {
       height: 634px;
       min-width: 1050px;
-      flex-direction: column;
-      margin: 0;
+      // flex-direction: column;
+      margin: 0 auto;
     }
     &__title {
       @include titleDesk;
-      order: 2;
+      line-height: 1;
+      // order: 2;
       z-index: 1;
       position: relative;
-      top: -50px;
-      left: 170px;
-      margin: 0;
+      top: 112px;
+      left: -350px;
     }
     &__descr{
       padding-bottom: 46px;
     }
     &__hot-sale {
       order: 1;
-      align-self: flex-start;
-      margin: 66px 0 0 47px;
+      // align-self: flex-start;
+      margin: 135px 0 0 49px;
     }
     &__detail {
+      width: 1050px;
+      height: 635px;
       order: 2;
-      align-self: flex-end;
-      flex-grow: 2;
-      width: 350px;
+      // align-self: flex-end;
+      justify-content: center;
+      align-content: flex-end;
+      // flex-grow: 2;
+      // width: 350px;
     }
     &__picture {
       order: 3;
     }
     &__to-buy {
       order: 2;
-      align-self: flex-end;
+      // align-self: flex-end;
       height: 130px;
       margin-right: 57px;
     }
     &__price{
       font-size: 20px;
       padding: 19px 0 34px 0;
+    }
+    &__caption{
+      width: 1050px;
+      height: 70px;
+      flex-direction: row-reverse;
+    }
+    &__text-wrap{
+      margin-top: 155px;
+      margin-bottom: 55px;
     }
   }
   .decoration {
