--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -533,9 +533,9 @@
       height: 106px;
     }
     &__price {
-      align-self: flex-start;
+      // align-self: flex-start;
       font-size: 21px;
-    padding-bottom: 32px;
+      padding-bottom: 32px;
     }
     &__detail {
       width: 668px;
