--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -1,7 +1,7 @@
 .contacts {
 // padding: 32px 0;
 min-height: 850px;
-    
+
 
     &__title{
         @include titleContactMobile;
@@ -56,8 +56,10 @@ min-height: 850px;
     }
 
     &__btn{
-        margin: 51px 0 0 30px;
+        margin: 45px 0 0 30px;
         width: 260px;
+        font-size: 18px;
+
     }
 
 }
